kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-master-pro-service
spec:
  selector:
    app: task-master-pro
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
